--- a/auditbeat/Jenkinsfile.yml
+++ b/auditbeat/Jenkinsfile.yml
@@ -11,7 +11,8 @@ when:
     parameters:                ## when parameter was selected in the UI.
         - "auditbeat"
     tags: true                 ## for all the tags
-platform: "immutable && ubuntu-18" ## default label for all the stages
+#platform: "immutable && ubuntu-18" ## default label for all the stages
+platform: "immutable && linux" ## default label for all the stages
 stages:
 #    lint:
 #        make: |
